2019-10-01 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_menu_item.c: Remove redundant validation and simplify
      validation of menu in geda_menu_is_empty, suspend initialization of the
      result until after validation, and rename list pointer cur -> iter.

2019-09-23 Wiley E. Hill <wileyhill@gmail.com>

    * include/geda_gtk_compat.h: Add documentation for

          * geda_get_widget_requisition
          * geda_get_widget_parent
          * geda_get_widget_window
          * geda_get_widget_allocation

    * src/functions/geda_container.c: Include "geda_gtk_compat.h" and utilize
      geda_get_widget_parent and geda_get_widget_allocation macros.

    * src/widgets/geda_combobox.c: Revise geda_combo_box_class_init to
      conditionally compile geda_combo_box_destroy as over-ride to either
      GtkObjectClass->destroy or GtkWidgetClass->destroy.

    * src/widgets/geda_menu_button.c: Revise geda_menu_button_class_init to
      conditionally compile geda_menu_button_destroy as over-ride to either
      GtkObjectClass->destroy or GtkWidgetClass->destroy.

2019-09-20 Wiley E. Hill <wileyhill@gmail.com>

    * include/geda_widgets.h: Include "geda_gtk_compat.h".

2019-09-19 Wiley E. Hill <wileyhill@gmail.com>

    * include/geda_gtk_compat.h: Define define GtkObject is GtkWidget when Gtk+-3.

    * src/widgets/geda_radio_menu_item.c: Revise geda_radio_menu_item_class_init
      to conditionally compile geda_radio_menu_item_destroy as over-ride to either
      GtkObjectClass->destroy or GtkWidgetClass->destroy.

2019-09-17 Wiley E. Hill <wileyhill@gmail.com>

    * include/geda_gtk_compat.h: Define gdk_cursor_destroy as gdk_cursor_unref
      when gdk_cursor_destroy is not defined.

    * include/geda_toolbar.h: Enumerate GedaToolbarChildType.

    * src/widgets/geda_combobox.c: Substitute gtk_widget_hide_all with
      geda_widget_hide_all.

    * src/functions/geda_widget.c: Add function geda_widget_hide_all.
